@@ -1,8 +1,11 @@
-CHANGES.txt - 09/21/2005
+CHANGES.txt - 09/22/2005
 ------------------------
 
 CHANGES IN CUPS V1.2.0b1
 
+	- The pdftops filter now adds the Title and Creator
+	  fields from the PDF file to the PostScript document
+	  comments section (STR #830)
 	- Added a new cups_array_t and cupsArray*() functions to
 	  the CUPS API to support sorted lists of data.
 	- Made the CUPS API library thread-safe (STR #1276)
